# eosio_contract_base

./: CMakeLists.txt  README.md  README.txt
include/: base_contract_dgoods_standard.hpp
include/base_contracts/: dgoods.cpp  logger.cpp
include/base_contracts/interfaces/: dgoods.hpp  logger.hpp
include/tools/: utility.hpp
src/: CMakeLists.txt  base_contract_dgoods_standard.cpp
